Fix mobile menu collapse feature

--- a/src/components/landing-page/top-nav.css
+++ b/src/components/landing-page/top-nav.css
@@ -50,7 +50,6 @@
     }
     
     nav {
-      height: 100%;
       font-size: 15px;
       padding-bottom: 5px;
     }
@@ -66,6 +65,7 @@
       left: 0;
       width: 100%;
       z-index: 8;
+      background: rgba(0, 0, 0, 0.25)
     }
 
     nav li {
